인영 커밋 - user.png , kobb.png,choicemode

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,20 @@
         android:theme="@style/Theme.Kobb"
         tools:targetApi="31">
         <activity
-            android:name=".Login_page"
-            android:exported="false" />
-        <activity
-            android:name=".TEST"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".Choice_mode_page"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+
         </activity>
     </application>
 
