--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
             android:name=".Sales_condition_page"
             android:exported="false" />
         <activity
+            android:name=".Mode_change_page"
+            android:exported="false" />
+        <activity
             android:name=".User_info_page"
             android:exported="false" />
         <activity
