--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,19 @@
         android:theme="@style/Theme.Kobb"
         tools:targetApi="31">
         <activity
-            android:name=".Choice_mode_page"
+            android:name=".Customer_main_page"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".Start_kiosk_page"
             android:exported="true">
 
         </activity>
