--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.Kobb"
         tools:targetApi="31">
         <activity
+            android:name=".join_success_page"
+            android:exported="false" />
+        <activity
+            android:name=".join_page"
+            android:exported="false" />
+        <activity
             android:name=".small_menu_page"
             android:exported="false" />
         <activity
