--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,22 @@
             android:name=".small_meun_page"
             android:exported="false" />
         <activity
-            android:name=".Main_menu_page"
-            android:exported="false" />
-        <activity
-            android:name=".Choice_mode_page"
+            android:name=".Customer_main_page"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".Main_menu_page"
+            android:exported="false" />
+        <activity
+            android:name=".Choice_mode_page"
+            android:exported="true">
+
         </activity>
         <activity
             android:name=".MainActivity"
