--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         tools:targetApi="31">
         <activity
             android:name=".Pay_page"
-            android:exported="false" />
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".Choice_pay_page"
             android:exported="true">
@@ -24,18 +26,18 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true" />
+            android:exported="true" >
+
+        </activity>
         <activity
             android:name=".Start_kiosk_page"
-            android:exported="false" />
+            android:exported="true" >
+
+        </activity>
         <activity
             android:name=".Join_page"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".Join_success_page"
@@ -47,8 +49,22 @@
             android:name=".Main_menu_page"
             android:exported="true" />
         <activity
-            android:name=".Choice_mode_page"
+            android:name=".Start_page"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".Login_page"
             android:exported="true" />
+        <activity
+            android:name=".Choice_mode_page"
+            android:exported="true" >
+
+        </activity>
     </application>
 
 </manifest>
