--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
         <activity
             android:name=".Choice_pay_page"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
         </activity>
 
@@ -52,11 +57,7 @@
         <activity
             android:name=".small_menu_page"
             android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".Main_menu_page"
@@ -71,9 +72,17 @@
         <activity
             android:name=".Login_page"
             android:exported="true" />
+
+        <activity
+            android:name=".Check_menu_page"
+            android:exported="true" >
+
+
+        </activity>
         <activity
             android:name=".Choice_mode_page"
             android:exported="true" >
+
 
         </activity>
 
@@ -82,6 +91,14 @@
             android:exported="true" >
 
         </activity>
+
+        <activity
+            android:name=".Cart_page"
+            android:exported="true" >
+
+        </activity>
+
+
     </application>
 
 </manifest>
