--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,19 +22,70 @@
             android:exported="true">
 
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
+
         <activity
             android:name=".Start_kiosk_page"
-            android:exported="false" />
+            android:exported="true">
+
+
+        </activity>
         <activity
             android:name=".Join_page"
             android:exported="true">
 
         </activity>
+
+        <activity
+            android:name=".Cart_page"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".Check_menu_page"
+            android:exported="true">
+
+        </activity>
+
+        <activity
+            android:name=".Choice_mode_page"
+            android:exported="true">
+
+        </activity>
+
+        <activity
+            android:name=".Control_inventory_page"
+            android:exported="true">
+
+        </activity>
+
+        <activity
+            android:name=".Control_kiosk_page"
+            android:exported="true">
+
+        </activity>
+
+        <activity
+            android:name=".Control_menu_page"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".Finish_order_page"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".Hot_cold_page"
+            android:exported="true">
+        </activity>
+
         <activity
             android:name=".Join_success_page"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".Login_page"
             android:exported="true" />
         <activity
             android:name=".small_menu_page"
@@ -44,17 +95,42 @@
             android:name=".Main_menu_page"
             android:exported="true" />
         <activity
-            android:name=".Choice_mode_page"
-            android:exported="true" />
+            android:name=".Manage_main_page"
+            android:exported="true">
+
+        </activity>
         <activity
-            android:name=".Control_inventory_page"
-            android:exported="true" >
+            android:name=".Mode_change_page"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".Sales_condition_page"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".Start_page"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+        <activity
+            android:name=".User_info_page"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".Customer_main_page"
+            android:exported="true">
+
+        </activity>
+
+
     </application>
 
 </manifest>
